@@ -71,8 +71,96 @@ if test -z "$XSLTPROC"; then
   AC_MSG_ERROR([xsltproc not found])
 fi
 
+### --------------------------------------------------------------------------
+### Check for perl
+
+# Check for perl, force version 5
+AC_ARG_WITH(perl,
+  [  --with-perl=FILE             which perl executable to use ],
+  PERL="${with_perl}")
+
+# If the user didn't specify a perl, then go fetch.
+if test x"$PERL" = x;
+then
+  AC_PATH_PROG(PERL, perl)
+fi
+
+# Make sure Perl was found
+if test x"$PERL" = x; then
+    AC_MSG_ERROR([Cannot find Perl. Try using the --with-perl flag.])
+fi
+
+# Make sure it's version 5 or later
+if "$PERL" -e 'exit 1 if $] < 5.0'; then
+	:
+else
+    AC_MSG_ERROR([Found ${PERL} reports version ]
+                 [`${PERL} -e 'print $]'`, need version 5.*])
+fi
+AC_SUBST(PERL)
+
+# Now check for perl headers
+# This appears to be what Perl's
+# ExtUtils::MakeMaker module does, so
+# I'm reasonably sure it's correct.
+# PERLINCL="/usr/lib/perl5/i386-linux/5.00404"
+#
+PERLINCL=`$PERL -MConfig -e 'print $Config{"archlibexp"}'`
+AC_ARG_WITH( perl-includes,
+   [  --with-perl-includes=DIR     specify where to look for perl includes],
+        PERLINCL="$with_perl_includes" )
+AC_SUBST(PERLINCL)
+
+### --------------------------------------------------------------------------
+### Berkeley db
+
+AC_ARG_ENABLE(prefer-db1,
+  [  --enable-prefer-db1          Prefer Berkeley DB
+1.x],[prefer_db1="$enableval"],[prefer_db1=yes])
+
+DB_LIBS=
+AC_CHECK_FUNC(dbopen, [],
+if test "$prefer_db1" = "yes"; then
+ AC_CHECK_LIB(db1, dbopen, DB_LIBS="-ldb1",
+  AC_CHECK_LIB(db, dbopen, DB_LIBS="-ldb",
+   AC_CHECK_LIB(db-3, __db185_open, DB_LIBS="-ldb-3",
+    AC_MSG_ERROR([Your db library is missing db 1.85 compatibility mode])
+   )
+  )
+ )
+else
+ AC_CHECK_LIB(db, dbopen, DB_LIBS="-ldb",
+  AC_CHECK_LIB(db1, dbopen, DB_LIBS="-ldb1",
+   AC_CHECK_LIB(db-3, __db185_open, DB_LIBS="-ldb-3",
+    AC_MSG_ERROR([Your db library is missing db 1.85 compatibility mode])
+   )
+  )
+ )
+fi
+)
+
+dnl look for db headers
+if test "$prefer_db1" = "yes"; then
+	AC_CHECK_HEADERS(db_185.h db1/db.h)
+	if test "$ac_cv_header_db_185_h$ac_cv_header_db1_db_h" = nono; then
+	  AC_MSG_ERROR([Berkeley db library required for GnuCash])
+	fi
+	AC_DEFINE(PREFER_DB1)
+else
+	AC_CHECK_HEADERS(db.h db_185.h db1/db.h)
+
+	if test
+"$ac_cv_header_db_h$ac_cv_header_db_185_h$ac_cv_header_db1_db_h" = nonono;
+then
+	  AC_MSG_ERROR([Berkeley db library required for GnuCash])
+	fi
+fi
+
+AC_SUBST(DB_LIBS)
+
 AC_OUTPUT(
 gnucash-docs.spec
+doc-tools/Makefile
 help/Makefile
 help/C/Makefile
 guide/Makefile
