@@ -1,0 +1,6 @@
+Makefile
+Makefile.in
+build-help-index
+dbadd
+.deps
+.libs
