@@ -1,3 +1,14 @@
+2002-12-12  Chris Lyttle  <chris@wilddev.net>
+
+	* acconfig.h: added to repository
+	* doc-tools: copy from main gnucash module
+	* Makefile.am: add doc-tools to subdir
+	* configure.in: add perl check, berkeley-db check, doc-tools makefile
+	* doc-tools/Makefile.am: add routines to make and install search-db
+	* doc-tools/dbadd.c: added to repository
+	* doc-tools/build-help-index.in: cleaned up html file stripping, use
+	  perl module File::Basename to make relative path to html dirs
+	
 2002-12-09  Chris Lyttle  <chris@wilddev.net>
 
 	* Makefile.am: add guide to subdirs
